Fixed spacing issues in header and made images circular

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ body {
   
 }
 
+img {
+  display: grid;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 /*****Header Styles*****/
 
 header {
